fix emojis overflowing the chat message (#3228)
* fix emojis overflowing the chat message

* fix: force ignoring of certain paths?

---------

--- a/web/styles/globals.scss
+++ b/web/styles/globals.scss
@@ -124,11 +124,10 @@ body {
 }
 
 .emoji {
-  display: inline-block;
   font-size: 30px;
   height: 30px;
   line-height: 30px;
-  margin-left: 5px;
-  margin-right: 5px;
+  margin-left: 2px;
+  margin-right: 2px;
   vertical-align: middle;
 }
